--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <ul id="users">
 
         @for (user of users; track user.id){
-            <li>
+            <li >
                 <app-user
                     [user]="user"
                     (select)="onSelect($event)"/>        
@@ -14,8 +14,8 @@
     </ul>
 
     @if (selectedUser){
-        <app-tasks [name]=" selectedUser.name "></app-tasks>
-    }
+        <app-tasks [userId]="selectedUser.id" [name]="selectedUser.name"></app-tasks>
+    } 
     @else {
         <p id = "fallback">Please select a user</p>
     }
