--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
-<div>
-    <button (click)="onSelectUser(user.id)">
+<app-card>
+    <button [class.active]="selected" (click)="onSelectUser(user.id)">
         <img 
             [src]="imagePath"
             [alt]="user.name"
@@ -8,4 +8,4 @@
             {{user.name}}
         </span>
     </button>
-</div>
+</app-card>
